# tRustMail

./: .env.example  .replit  CONTRIBUTING.md  Cargo.toml  README.md  config.example.yaml  config.yaml
.cargo/: config.toml
attached_assets/: Pasted-Major-Issues-Feedback-1-Incomplete-Placeholder-Implementations-Many-functions-e-g-DKIM-signing-1747767817926.txt
src/: api.rs  auth.rs  config.rs  db.rs  email.rs  main.rs  smtp_listener.rs
src/migrations/: 20230101000000_initial.sql
temp/mailin-test/: Cargo.toml
temp/mailin-test/src/: main.rs
temp2/: Cargo.toml
temp2/src/: main.rs
