[package]
name = "mailsender"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A lightweight, Rust-based, headless SMTP send-only service with PostgreSQL storage"

[dependencies]
axum = { version = "0.6", features = ["http1", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "offline"] }
lettre = { version = "0.10", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
rand_core = { version = "0.5", features = ["std"] }
base64 = "0.13"
sha256 = "1.1"
ed25519-dalek = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
